git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@341 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_accounts_find.html.haml
+++ b/app/views/accountancy/_accounts_find.html.haml
@@ -1,5 +1,5 @@
 .window
-  = link_to_function l(:close) do |p| 
+  = link_to_function t 'close' do |p| 
     - p.replace_html 'account', '' 
     - p['account_number'].focus()
   - if @accounts.size > 0
