--- a/app/views/accountancy/statements_point.html.haml
+++ b/app/views/accountancy/statements_point.html.haml
@@ -9,8 +9,11 @@
     %th=lc (:entry_credit)
   - @entries.each do |entry|
     - attr = cycle("even", "odd")+"-"
-    %tr{ :class => attr+((entry.statement_id.eql? session[:statement].to_i) ? "pointable" : "unpointable"), :id=> 'e'+entry.id.to_s, :onclick => remote_function(:after => "var element=$('e"+entry.id.to_s+"'); if (element.hasClassName('"+attr+"pointable')) { element.removeClassName('"+attr+"pointable'); element.addClassName('"+attr+"unpointable'); } else { element.removeClassName('"+attr+"unpointable'); element.addClassName('"+attr+"pointable'); }",:url => { :action => 'statements_point', :id => entry.id}) }
-      %td=@bank_account_statement.number
+    %tr{ :class => attr+(entry.statement_id ? "pointable" : "unpointable"), :id=> 'e'+entry.id.to_s, :onclick => remote_function(:after => "var element=$('e"+entry.id.to_s+"'); if (element.hasClassName('"+attr+"pointable')) { element.removeClassName('"+attr+"pointable'); element.addClassName('"+attr+"unpointable'); } else { element.removeClassName('"+attr+"unpointable'); element.addClassName('"+attr+"pointable'); }",:url => { :action => 'statements_point', :id => entry.id}) }
+      - if entry.statement_id
+        %td=entry.statement.number
+      - else
+        %td=''
       %td=@bank_account_statement.started_on
       %td=@bank_account_statement.stopped_on
       %td=entry.name
@@ -23,5 +26,5 @@
     %td
     %td#total_debit=0
     %td#total_credit=0
-=link_to lc (:validate), :action => :statements, :id => @bank_account.id
+=link_to lc(:validate), :action => :statements, :id => @bank_account.id
 #total
