--- a/app/views/accountancy/statements_display.html.haml
+++ b/app/views/accountancy/statements_display.html.haml
@@ -1,10 +1,10 @@
 %h1=lc(:title)
 %table.dyta
   %tr
-    %th=lc (:statement_number)
-    %th=lc (:statement_bank_account_name)
-    %th=lc (:statement_debit)
-    %th=lc (:statement_credit)
+    %th=lc(:statement_number)
+    %th=lc(:statement_bank_account_name)
+    %th=lc(:statement_debit)
+    %th=lc(:statement_credit)
   %tr
     %th=@bank_account_statement.number
     %th=@bank_account_statement.bank_account.name
@@ -13,13 +13,13 @@
 %br
 %table.dyta
   %tr
-    %th=lc (:entry_name)
-    %th=lc (:entry_debit)
-    %th=lc (:entry_credit)
+    %th=lc(:entry_name)
+    %th=lc(:entry_debit)
+    %th=lc(:entry_credit)
   - @bank_account_statement.entries.each do |entry|
     %tr
       %td=entry.name
       %td=entry.debit
       %td=entry.credit
-=link_to(lc(:cancel), {:action => :statements_point, :id => session[:statement]})
+=link_to(lc(:cancel), session[:history][1])
   
