--- a/app/views/accountancy/_journals_form.html.haml
+++ b/app/views/accountancy/_journals_form.html.haml
@@ -3,4 +3,4 @@
   - f.field :journal, :name
   - f.field :journal, :code
   - f.field :journal, :currency_id, :choices=>@current_company.currencies.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
-  - f.field :journal, :nature, :field=>:radio, :choices=>Journal.natures.collect{|x| [lc(:natures, x),x.to_s]}
+  - f.field :journal, :nature, :field=>:radio, :choices=>Journal.natures
