--- a/app/views/authentication/register.html.haml
+++ b/app/views/authentication/register.html.haml
@@ -1,5 +1,3 @@
-%h1=lc :title
-
 .formalize
   - form_tag do
     .fields
@@ -14,5 +12,5 @@
         - f.field :user, :password, :null=>false, :hint=>lc(:user_password_hint)
         - f.field :user, :password_confirmation, :null=>false, :info=>lc(:user_password_confirmation_info)
       .actions
-        =submit_tag(t(:create))
-        =link_to(t(:cancel), :action=>:login)
+        =submit_tag(tg(:create))
+        =link_to(tg(:cancel), :action=>:login)
