--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -1,5 +1,4 @@
-%h1=lc(:title, [@company.name])
-=link_to lc(:update) , {:action=>:update}
+=link_to tc(:update) , {:action=>:update}
 .detail
   = evalue @company , :name 
   = evalue @company , :siren
