--- a/app/views/management/price_lists_display.html.haml
+++ b/app/views/management/price_lists_display.html.haml
@@ -1,7 +1,6 @@
-%h1=lc(:title, [@price_list.name])
 =evalue @price_list, :name
 =evalue @price_list, :currency
 =evalue @price_list, :comment
 
-%h2=lc(:prices)
+%h2=tc(:prices)
 =dyta :prices
