--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -1,7 +1,15 @@
 %div{:orient=>:vertical, :flex=>1}
   .nav
-    #help-close.help-link=link_to_remote(content_tag(:div, "&nbsp;"), :url=>{:controller=>:help, :action=>:close},:complete => "closeHelp();", :loading=>"onLoading();", :loaded=>"onLoaded();")
+    #help-close.help-link=link_to_remote(content_tag(:div, "&nbsp;"), :url=>{:controller=>:help, :action=>:close}, :loading=>"closeHelp(); onLoading();", :loaded=>"onLoaded();")
     #help-previous.help-link=link_to_remote(content_tag(:div, "&nbsp;"), :url=>{:controller=>:help, :action=>:previous }, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();" ) if session[:help_history].size>1
-    #help-web.help-link=link_to(content_tag(:div, "&nbsp;"), "http://www.ekylibre.org")
-    .light=lc :title
-  .content{:flex=>1, :style=>'overflow:auto;'}=retrieve(@id,:default=>'guide-index')
+    %h1.title=tc :title
+  .content{:flex=>1, :style=>'overflow:auto;'}
+    - doc=retrieve(@id)
+    - if doc.blank?
+      .help-error
+        =tc(:error_no_file, :value=>@id)
+      %ul
+        %li=link_to_remote(tc("home"), :url=>{:controller=>:help, :action=>:search, :id=>"guide-index"}, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();" )
+    - else
+      =doc
+    .text-end &nbsp;
