--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
     %link{:rel=>"icon", :type=>"image/png", :href=>"/images/favicon.png"}
-    = title_tag
+    %title='Ekylibre - '+t("controllers.#{controller.controller_name.to_s}.title")
     = stylesheet_link_tag 'application'
     = javascript_include_tag :defaults
   %body{:id=>:body, :orient=>:vertical, :onload=>'resize();', :onresize=>'resize();'}
@@ -12,12 +12,19 @@
     #columns{:orient=>:horizontal, :flex=>1}
       =left_tag
       #main{:flex=>9, :orient=>:vertical}
-        = flash_tag :error
-        = flash_tag :warning
-        = flash_tag :notice
         #content{:flex=>3, :orient=>:vertical}
-          = help_tag
-          #yield=yield
+          .nav{:flexy=>'true'}
+            =help_tag
+            %h1.title=title
+          #yield{:flex=>50, :orient=>:vertical}
+            = flash_tag :error
+            = flash_tag :warning
+            = flash_tag :notice
+            - unless flash[:message].blank?
+              .message=flash[:message]
+            =yield
+            .end{:style=>'height:1px'}
+        #legals{:flexy=>'true'}=link_to 'www.ekylibre.org', 'http://www.ekylibre.org'
       #help{:flex=>3, :style=>''+(session[:help] ? "" : "display:none")}
         = render :partial=>'help/search' if session[:help]
  
