--- a/app/views/management/products.html.haml
+++ b/app/views/management/products.html.haml
@@ -1,6 +1,4 @@
-%h1=lc :title
-
-.count=lc(:nb_products, [@current_company.available_products.size])
+.count=tc(:nb_products, :count=>@current_company.available_products.size)
 
 =render :partial=>'products_search'
 
