--- a/app/views/shared/form_update.html.haml
+++ b/app/views/shared/form_update.html.haml
@@ -1,7 +1,6 @@
-%h1=t "#{self.controller.controller_name.to_s}.#{action_name.to_s}.title", {:label=>@options[:label]}
 - form_tag do
   =render :partial=>@partial
   .actions
-    =submit_tag(t (@options[:submit]||:update).to_s)
-    =link_to(t((@options[:cancel]||:cancel).to_s),:back)
+    =submit_tag(tg(@options[:submit]||:update))
+    =link_to_back :label=>@options[:cancel]||:cancel
 
