git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@354 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -10,8 +10,8 @@
       =evalue @product, :code2
       =evalue @product, :ean13
     %td
-      =evalue @product, :shelf
-      =evalue @product, :unit
+      =evalue @product, :shelf, :url=>{:action=>:shelves_display}
+      =evalue @product, :unit, :label=>:label
       =evalue @product, :active
       =evalue @product, :to
     %td
