--- a/app/views/management/price_lists_display.html.haml
+++ b/app/views/management/price_lists_display.html.haml
@@ -1,3 +1,7 @@
+= aclist do |l|
+  - l.action :price_lists_update, :id=>@price_list.id
+  - l.action :price_lists
+
 =evalue @price_list, :name
 =evalue @price_list, :currency
 =evalue @price_list, :comment
