git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@355 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_departments_form.html.haml
+++ b/app/views/company/_departments_form.html.haml
@@ -1,5 +1,5 @@
 =formalize do |f|
   -f.error :department
-  -f.title lc(:subtitle)
+  -f.title :subtitle
   -f.field :department, :name
-  -f.field :department, :comment
+  -f.field :department, :comment, :field=>:textarea
