--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -1,6 +1,6 @@
 =formalize do |f|
   -f.error :user
-  -f.title lc(:subtitle)
+  -f.title :subtitle
   -f.field :user, :last_name
   -f.field :user, :first_name
   -f.field :user, :email
