--- a/app/views/company/user.html.haml
+++ b/app/views/company/user.html.haml
@@ -1,4 +1,4 @@
-= link_to lc(:change_password) ,  {:controller=>:authentication , :action=>:change_password}
+= link_to tc(:change_password) ,  {:controller=>:authentication , :action=>:change_password}
 .detail
   = evalue @user, :name
   = evalue @user, :first_name
