--- a/app/views/company/_establishments_form.html.haml
+++ b/app/views/company/_establishments_form.html.haml
@@ -1,6 +1,6 @@
 =formalize do |f|
   -f.error :establishment
-  -f.title lc(:subtitle)
+  -f.title :subtitle
   -f.field :establishment, :name
   -f.field :establishment, :nic
-  -f.field :establishment, :comment
+  -f.field :establishment, :comment ,:field=>:textarea
