--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -280,15 +280,14 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus, select:f
 input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea.invalid:focus, select.invalid:focus { border-color: red !important; }
 
 
-#login   { width:512px; border: none; margin:64px auto; background:#F0F3FF; z-index: 1000;}
-#login .logoban { height:64px; background: url(/images/ekylibre.png) no-repeat center; }
+#login { width:512px; border: 1px solid #95b0e4; margin:64px auto; background:#c9d7f1; z-index: 1000;}
+#login .logoban { height:80px; background: url(/images/ekylong.png) no-repeat center; }
 #login h2 { background: url(/images/template/gradient.png) repeat-x top; color:white; padding: 2px; text-align:center; font-size:18px;}
 #login table { border-collapse: collapse;  margin:16px auto; margin-left:auto; margin-right:auto;}
 #login table tr td { padding: 2px 4px;}
 #login table tr td.label { text-align:right;}
 #login table tr td.input, #login table tr td.input input { text-align:left; width:128px;}
 #login table tr td.button {text-align:center; padding:6px 6px 16px;}
-#login .line {height:8px; background: url(/images/template/gradient.png) repeat-x top;}
 /*div.flash-error {text-align:center; color:red; font-style:italic;height:20px;padding: 16px; margin-top: 64px;}*/
 
 .window { padding:4px; background: #EEE; border: 1px solid #AAA; margin: 8px;}
